<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idRLBSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_blue_shade_1"
    android:padding="4dp">

    <!--text view for displaying Manga name-->
    <TextView
        android:id="@+id/idTVMangaName"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:padding="4dp"
        android:text="@string/Manga_name"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!--image view for displaying Manga image-->

    <ImageView
        android:id="@+id/idIVManga"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/idTVMangaName"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/description_image"
        android:padding="4dp"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />
    <!--text view for displaying Manga description-->
    <TextView
        android:id="@+id/idTVMangaDesc"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVMangaName"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/idIVManga"
        android:layout_toRightOf="@id/idIVManga"
        android:padding="3dp"
        android:text="@string/description"
        android:textColor="@color/white" />

    <!--text view for displaying Manga best suited for-->
    <TextView
        android:id="@+id/idTVSuitedFor"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVMangaDesc"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/idIVManga"
        android:layout_toRightOf="@id/idIVManga"
        android:padding="3dp"
        android:text="@string/suited_for"
        android:textColor="@color/white" />

    <!--text view for displaying Manga price-->
    <TextView
        android:id="@+id/idTVMangaPrice"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVSuitedFor"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/idIVManga"
        android:layout_toRightOf="@id/idIVManga"
        android:padding="3dp"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVMangaPrice"
        android:orientation="horizontal"
        android:weightSum="2">

        <!--button for editing Manga-->
        <Button
            android:id="@+id/idBtnEditManga"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:text="@string/edit_Manga"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <!--button for viewing Manga details-->
        <Button
            android:id="@+id/idBtnVIewDetails"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:text="@string/view_details"
            android:textAllCaps="false"
            android:textColor="#F2F3F4" />


    </LinearLayout>


</RelativeLayout>